--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport"
           content="user-scalable=0, initial-scale=1,minimum-scale=1, maximum-scale=1, width=device-width, minimal-ui=1">
     <title>Phaser Blast Game</title>
+    <link rel="stylesheet" href="assets/fonts/marvin/style.css" />
+    <link rel="stylesheet" href="assets/style/style.css" />
 </head>
 
 <body>
